# pytest-beehave

./: .dockerignore  .gitignore  .pyproject.toml.swp  AGENTS.md  CHANGELOG.md  README.md  TODO.md  discovery.md  feedback.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  pypi-publish.yml
.opencode/agents/: reviewer.md
.opencode/skills/design-patterns/: SKILL.md
.opencode/skills/feature-selection/: SKILL.md
.opencode/skills/git-release/: SKILL.md
.opencode/skills/implementation/: SKILL.md
.opencode/skills/refactor/: SKILL.md
.opencode/skills/scope/: .SKILL.md.swp  SKILL.md  discovery-template.md
.opencode/skills/session-workflow/: SKILL.md
.opencode/skills/verify/: SKILL.md
api/: index.html  pytest_beehave.html  search.js
api/pytest_beehave/: bootstrap.html  config.html  feature_parser.html  hatch.html  html_steps_plugin.html  id_generator.html  models.html  plugin.html  reporter.html  steps_reporter.html  stub_reader.html  stub_writer.html  sync_engine.html
c4/: container.md
coverage/: class_index.html  function_index.html  index.html  status.json  z_650c832e3ea2a24e___init___py.html  z_650c832e3ea2a24e___main___py.html  z_650c832e3ea2a24e_bootstrap_py.html  z_650c832e3ea2a24e_config_py.html  z_650c832e3ea2a24e_feature_parser_py.html  z_650c832e3ea2a24e_hatch_py.html  z_650c832e3ea2a24e_html_steps_plugin_py.html  z_650c832e3ea2a24e_id_generator_py.html  z_650c832e3ea2a24e_models_py.html  z_650c832e3ea2a24e_plugin_py.html  z_650c832e3ea2a24e_reporter_py.html  z_650c832e3ea2a24e_steps_reporter_py.html  z_650c832e3ea2a24e_stub_reader_py.html  z_650c832e3ea2a24e_stub_writer_py.html  z_650c832e3ea2a24e_sync_engine_py.html
docs/: .architecture.md.swp  .discovery.md.swp  architecture.md  discovery.md  discovery_journal.md  glossary.md  index.html
docs/c4/: container.md  context.md
docs/features/: discovery.md
docs/features/backlog/: auto-id-generation.feature  deprecation-sync.feature  display-version.md  features-dir-bootstrap.feature  gen-tests-orphan-fix.md  stub-creation.feature  stub-format-config.feature  stub-updates.feature
docs/features/completed/: auto-id-generation.feature  deprecation-sync.feature  example-hatch.feature  features-dir-bootstrap.feature  features-path-config.feature  multilingual-feature-parsing.feature  plugin-hook.feature  report-steps.feature  stub-creation.feature
docs/features/in-progress/: report-steps.feature  stub-format-config.feature  stub-updates.feature
docs/scientific-research/: README.md
features/completed/: stub-creation.feature  stub-updates.feature
pytest_beehave/: bootstrap.py  config.py  feature_parser.py  hatch.py  html_steps_plugin.py  id_generator.py  models.py  plugin.py  reporter.py  steps_reporter.py  stub_reader.py  stub_writer.py  sync_engine.py
tests/: conftest.py  report.html
tests/features/auto-id-generation/: auto_id_write_back_test.py
tests/features/auto_id_generation/: auto-id-write-back_test.py  auto_id_write_back_test.py  ci-id-enforcement_test.py  ci_id_enforcement_test.py
tests/features/deprecation-sync/: deprecation_marker_sync_test.py
tests/features/deprecation_sync/: conftest.py  mark-deprecated-examples_test.py  mark-deprecated-via-tag-inheritance_test.py  mark_deprecated_examples_test.py  mark_deprecated_via_tag_inheritance_test.py  remove-deprecated-marker_test.py  remove_deprecated_marker_test.py
tests/features/example_hatch/: capability_showcase_content_test.py  configured_path_respect_test.py  hatch_invocation_test.py  overwrite_protection_test.py  stdlib_only_randomisation_test.py
tests/features/features_dir_bootstrap/: feature-file-migration_test.py  (+7 more)
tests/unit/: bootstrap_test.py  config_test.py  feature_parser_test.py  id_generator_test.py  plugin_test.py  pytest_beehave_test.py  reporter_test.py  stub_reader_test.py  stub_writer_test.py  sync_engine_test.py
(+38 files in other folders)
